css/globals.css
@import url('https://fonts.googleapis.com/css2?family=Rationale&display=swap');

:root {
    --danger: #FF6464;
    --border: 2px;
    --slant: .5em;
}

* {
    font-family: "Rationale", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    width: 100%;
    height: 100vh;
    margin: 0;
    background-color: var(--background-color);
}

a {
    text-decoration: none;
    color: black;
}

ul, ol{
    list-style-type: none;
}

header, footer {
    background-color: var(--primary);
}

.container {
    max-width: 80%;
    width: 80%;
    margin: 0 auto;
}

/*-----------------
HEADER STYLES 
-----------------*/
header {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 3;
}

.items {
    display: flex;
    align-items: center;
    justify-content: space-between;   
}

nav img {
    width: 90px;
}

.logo a{
    display: flex;
    align-items: center;
    gap: .5rem;
}

.logo h1{
    text-align: center;
    color: var(--heading-color);
    font-size: 1.9rem;
    font-weight: 150;
}

.menu {
    display: flex;
    align-items: center;
    gap: 2rem;
}

.menu ul {
    display: flex;
    gap: 3rem;
}

.menu ul li a{
    color: var(--heading-color);
    font-size: 1.5rem;
}

.menu ul li a:hover {
    color: var(--accent);
}

.menu .action {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    font-size: 2rem;
    cursor: pointer;
}

.menu .action i{
    color: var(--heading-color);
}

#toggle-theme-button{
    padding: 0 .5rem;
    background: rebeccapurple;
}
.menu .action .fa-bars{
    display: none;
}

/* header for mobile */
header.mobile-menu{
    display: none;
}

header.mobile-menu ul li a{
    color: var(--heading-color);
}

.btn {
    padding: 7px 25px;
    font-size: 1.25rem;
    border: none;
    cursor: pointer;
    color: var(--heading-color);
    background:
        linear-gradient(to bottom left, var(--heading-color) 50%, #0000 50.1%) top right,
        linear-gradient(to top right, var(--heading-color) 50%, #0000 50.1%) bottom left;
    background-size: calc(var(--slant) + 1.3*var(--border)) calc(var(--slant) + 1.3*var(--border));
    background-repeat: no-repeat;
    box-shadow:
        0 0 0 200px inset var(--s, #0000),
        0 0 0 var(--border) inset var(--heading-color);
    clip-path:
        polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
        100% 100%, var(--slant) 100%, 0 calc(100% - var(--slant)));
    transition: color var(--t, 0.3s), background-size 0.3s;
    }

.btn:focus-visible {
    outline-offset: calc(-1*var(--border));
    outline: var(--border) solid #000c;
    clip-path: none;
    background-size: 0 0;
}

.btn:hover,
.btn:active {
    background-size: 100% 100%;
    color: #fff;
    --t: 0.2s 0.1s;
}

.btn:active {
    --s: #0005;
    transition: none;
}

main {
    margin-top: 5.25rem;
}

/*-----------------
LOADER STYLES 
-----------------*/
.loader{
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

/*-----------------
FOOTER STYLES 
-----------------*/
footer {
    margin-top: 2.5rem;
}

.footer-nav {
    display: flex;
    justify-content: space-between;
    padding: 1.25rem 0;
}

.footer-nav h1{
    font-size: 1.25rem;
    color: var(--heading-color);
}

.footer-nav .info {
    width: 20%;
    text-align: justify;
}

.footer-nav .info p {
    color: var(--text-color);
}

.footer-nav  .link ul li a {
    color: var(--text-color);
}

.footer-nav .contribute ul li a{
    color: var(--text-color);
}

.footer-nav .sponsor img {
    margin-right: .25rem;
    max-width: 1.5rem;
}

.footer-nav .socials i {
    margin-right: .25rem;
    font-size: 1.5rem;
    color: var(--heading-color);
}

